--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Data files
+*.csv
+*.json
+*.parquet
+data/
+
+# Trained models
+*.pkl
+*.joblib
+*.h5
+*.pth
+models/
+
+# Outputs & Reports
+outputs/
+results/
+*.png
+
+# Custom secrets (if not using .env)
+secrets.ini
+config.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
